--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,18 @@
 name: promoter
 
-on:
-  push:
-    branches: [ "main" ]
-    tags:
-      - 'v*'
-  # pull_request:
-  #   branches: [ "main" ]
-
 # on:
 #   push:
-#     # run only against tags
+#     branches: [ "main" ]
 #     tags:
 #       - 'v*'
+#   pull_request:
+#     branches: [ "main" ]
+
+on:
+  push:
+    # run only against tags
+    tags:
+      - 'v*'
 
 permissions:
   contents: write
@@ -29,7 +29,7 @@ jobs:
       - run: git fetch --force --tags
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: 1.20.2
       # More assembly might be required: Docker logins, GPG, etc. It all depends
       # on your needs.
       - uses: goreleaser/goreleaser-action@v4
